libmeegotouch (0.20.72~1) unstable; urgency=low

  * unreleased

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 05 Jan 2011 14:40:52 +0100

libmeegotouch (0.20.71-1) unstable; urgency=low

  * New version
  * Fixes: NB#215046 - Regression: MeeGoTouch eats touchpoints
  * Changes: Tests.xml generating script: commented out statistics printout

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 04 Jan 2011 13:07:02 +0100

libmeegotouch (0.20.70-1) unstable; urgency=low

  * New version
  * Fixes: NB#194018 - MPannableViewport::setMinimumSize resets panned widget position.
  * Fixes: NB#192037 - Multiline MTextedit doesn't expand to next line on word wrapping.

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 04 Jan 2011 09:49:24 +0100

libmeegotouch (0.20.69-1) unstable; urgency=low
  
  * New version
  * Fixes: NB#206058 - Sometimes MSceneWindow uses the landscape style even when the MWindow has been locked to portrait  
  * Fixes: NB#208934 - Volume indicator doesnot return to landscape in video play
  * Fixes: NB#212448 - MWindow constructor causes ContextProperty::waitForSubscription() to be called, which may cause all kinds of side effects in an application
  * Fixes: NB#212289 - Visual press feedback is not shown always when tapping an icon button

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 28 Dec 2010 10:50:00 +0100

libmeegotouch (0.20.68-1) unstable; urgency=low

  * New version
  * Fixes: NB#209041 - Application window style is missing navigation bar style property.
  * Fixes: NB#203650 - displayEntered() not emitted when switching between two windows in the same app
  * Fixes: NB#211200 - [+request] API needed for enabling/disabling text magnifier in text entries

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 23 Dec 2010 09:41:44 +0100

libmeegotouch (0.20.67-1) unstable; urgency=low

  * New version
  * Fixes: NB#212602 - Tapping the status area makes the device struck